--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/ELJ.png">
+            <img class="avatar" src="ELJ.png">
             <div >
                 <h3>Erica J.</h3>
                 <p>Frontend Developer, Data Analyst</p>
